# fMRI-frequency-resolved-patterns

./: .gitignore  Cargo.toml  README.md  config.toml  config.toml.example
crates/00tcp_subject_selection/src/: lib.rs
crates/01fmri_parcellation/: Cargo.toml
crates/01fmri_parcellation/src/: lib.rs  nifti_masker.rs
crates/01fmri_parcellation/src/nifti_masker/: labels_masker.rs  signal_masker.rs
crates/02fmri_segment_trials/: Cargo.toml
crates/02fmri_segment_trials/src/: lib.rs
crates/03cwt/: Cargo.toml
crates/03cwt/src/: lib.rs
crates/04hht/: Cargo.toml
crates/04hht/src/: algorithms.rs  hilbert.rs  lib.rs
crates/04hht/src/algorithms/: admm.rs  mvmd.rs  power_iter.rs
crates/04mvmd/: Cargo.toml
crates/04mvmd/src/: lib.rs
crates/05hilbert/: Cargo.toml
crates/05hilbert/src/: lib.rs
crates/06fc/src/: lib.rs
crates/07feature_extraction/: Cargo.toml
crates/07feature_extraction/src/: feature_extractor.rs  lib.rs  models.rs  preprocessing.rs  strategies.rs
crates/08classification/: Cargo.toml
crates/08classification/src/: analyses.rs  calibration.rs  classifiers.rs  dataset.rs  eval.rs  lib.rs  metrics.rs  pca.rs  splits.rs
crates/08data_splitting/: Cargo.toml
crates/08data_splitting/src/: lib.rs
crates/09classification/: Cargo.toml
crates/09classification/src/: classifiers.rs  dataset.rs  lib.rs
crates/09fc_analysis/: Cargo.toml
crates/09fc_analysis/src/: aggregation.rs  analyses.rs  dispatch.rs  io.rs  lib.rs
crates/atlas/src/: lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/config/src/: lib.rs  pipeline_config.rs  polars_csv.rs  tcp_config.rs
crates/fmri_process/: Cargo.toml
crates/fmri_process/src/: lib.rs
crates/hdf5_io/: Cargo.toml
crates/hdf5_io/src/: lib.rs
crates/nifti_masker/: Cargo.toml
crates/nifti_masker/src/: lib.rs
crates/signals/: Cargo.toml
crates/signals/src/: mvmd.rs
crates/tcp_fmri/: Cargo.toml
crates/tcp_fmri/src/: lib.rs
crates/tcp_fmri_preprocess/: Cargo.toml
crates/tcp_fmri_preprocess/src/: lib.rs
crates/tcp_fmri_process/: Cargo.toml
crates/tcp_fmri_process/src/: atlas.rs  lib.rs
crates/tcp_fmri_segment_trials/src/: lib.rs
crates/tcp_mvmd/src/: lib.rs
crates/tcp_preprocess/: Cargo.toml
crates/tcp_preprocess/src/: lib.rs
crates/tcp_subject_selection/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: atlas.rs  bids_filename.rs  config.rs  frequency_bands.rs  hdf5_io.rs  intermediates.rs  lib.rs  polars_csv.rs  roi_migration.rs
scripts/: init.sh  run-pipeline.sh  run-pipeline_mode-debug.sh  sys-all_fetch-atlas.sh  sys-all_fetch-weights.sh  sys-idun_config.sh  sys-idun_fetch-slurmjobs.sh  sys-local_config.sh  sys-local_install-deps.sh
(+43 files in other folders)
