[package]
name = "tcp_fmri_process"
version = "0.1.0"
edition = "2024"

[dependencies]
hdf5 = "0.8"

anyhow = { workspace = true }
ndarray = { workspace = true }
nifti = { workspace = true }
polars = { workspace = true }
polars-io = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

config = { path = "../config" }
